# oneapi-construction-kit

./: .clang-format  .clang-tidy  .clangd  .cmakelintrc  .editorconfig  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .mdlrc  .pylintrc  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.txt  README.md  SECURITY.md  override_native_cpu.csv  pull_request_template.md  rfc-0000.md  rfc-0001.md  rfc-0002.md  rfc-0003.md
clik/: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  release.sh
clik/cmake/: BakedKernel.cmake  ClikExample.cmake  SelectHAL.cmake
clik/examples/: CMakeLists.txt
clik/examples/clik_async/: CMakeLists.txt
clik/examples/clik_sync/: CMakeLists.txt
clik/examples/mux/: CMakeLists.txt
clik/examples/option_parser/: CMakeLists.txt  option_parser.cc  option_parser.h
clik/include/: clik_async_api.h  clik_common.h  clik_hal_version.h  clik_sync_api.h
clik/include/async/: clik_command_queue.h  clik_objects.h
clik/include/sync/: clik_objects.h
clik/runtime/: CMakeLists.txt
clik/runtime/async/: CMakeLists.txt  clik_async.cpp  clik_command_queue.cpp
clik/runtime/sync/: CMakeLists.txt  clik_sync.cpp
clik/test/: CMakeLists.txt  clik.py  execution.py  profile.py  run_tests.py  runner.py  test_info.py  ui.py
compiler_passes/: CMakeLists.txt  README.md
examples/applications/: CMakeLists.txt  simple-vector-add.cpp  vector_addition-load-store.cpp  vector_addition-masked-store.cpp  vector_addition-predicated.cpp  vector_addition-tiled-load-store.cpp
examples/applications/clVectorAddition/: main.c
examples/hal_cpu_remote_server/: CMakeLists.txt  README.md  hal_cpu_executable.cpp
examples/hals/hal_refsi_tutorial/: CMakeLists.txt
hal/: .gitlab-ci.yml  CMakeLists.txt  readme.md
hal/cmake/: HALBin2H.cmake  HALBin2HScript.cmake
hal/docs/: dynamic_loading.md  hal.md
hal/hal_remote/: CMakeLists.txt
hal/hal_remote/source/: hal_device_client.cpp  hal_server.cpp  hal_socket_transmitter.cpp
hal/include/: allocator.h  arg_pack.h  elf.h  hal.h  hal_counters.h  hal_library.h  hal_profiler.h  hal_riscv.h  hal_riscv_common.h  hal_types.h  program.h
hal/source/: arg_pack.cpp  hal_library.cpp  hal_riscv_common.cpp  profiler.cpp  program.cpp
hal/source/hal_null/: CMakeLists.txt
modules/: CMakeLists.txt  README.md
modules/cargo/: CMakeLists.txt  LICENSE.txt
modules/cargo/source/: allocator.cpp  endian.cpp  statics.cpp  thread.cpp
modules/cargo/test/: allocator.cpp  argument_parser.cpp  array_view.cpp  bit_cast.cpp  common.h  dynamic_array.cpp  endian.cpp  error.cpp  expected.cpp  fixed_vector.cpp  function_ref.cpp  mutex.cpp  optional.cpp  ring_buffer.cpp  small_vector.cpp  string_algorithm.cpp  string_view.cpp  thread.cpp
modules/compiler/: CMakeLists.txt
modules/compiler/builtins/: CMakeLists.txt
modules/compiler/cmake/: compiler-config.cmake
modules/compiler/compiler_pipeline/: CMakeLists.txt
modules/compiler/loader/: CMakeLists.txt
modules/compiler/multi_llvm/: CMakeLists.txt
modules/compiler/riscv/: CMakeLists.txt
modules/compiler/source/: export-linux.sym  export-windows.def  export-windows.def.cmake  export.cpp
modules/compiler/spirv-ll/: CMakeLists.txt
modules/compiler/targets/: CMakeLists.txt
modules/compiler/test/: CMakeLists.txt  common.h  group_ops.cpp  info.cpp  kernel.cpp  library.cpp  mangling.cpp  module.cpp  target.cpp  utils.cpp
modules/compiler/tools/: CMakeLists.txt
modules/compiler/utils/: CMakeLists.txt
modules/compiler/vecz/: CMakeLists.txt  README.md
modules/debug/: CMakeLists.txt
modules/debug/source/: backtrace.cpp
modules/kts/: CMakeLists.txt
modules/kts/source/: arguments_shared.cpp  reference_functions_shared.cpp  stdout_capture.cpp
modules/lit/: CMakeLists.txt  ca-lit.in  lit.common.cfg.in
modules/lit/utils/: __init__.py  tool_config.py
modules/loader/: CMakeLists.txt  README.md
modules/loader/source/: elf.cpp  mapper.cpp  relocations.cpp
modules/metadata/: CMakeLists.txt
modules/multi_llvm/: CMakeLists.txt
modules/mux/: CMakeLists.txt  LICENSE  README.md
modules/mux/cmake/: mux-config.cmake
modules/mux/source/: CMakeLists.txt  buffer.cpp  command_buffer.cpp  config.cpp  device.cpp  executable.cpp  fence.cpp  image.cpp  kernel.cpp  memory.cpp  query_pool.cpp  queue.cpp  semaphore.cpp
modules/mux/targets/: CMakeLists.txt
modules/mux/test/: CMakeLists.txt  application.cpp  builtin_kernel_application.cpp  c.c  common.h  muxAllocateMemory.cpp  muxBindBufferMemory.cpp  muxBindImageMemory.cpp  muxCloneCommandBuffer.cpp  muxCommandBeginQuery.cpp  muxCommandCopyBuffer.cpp  muxCommandCopyBufferRegions.cpp  muxCommandEndQuery.cpp  muxCommandFillBuffer.cpp  muxCommandNDRange.cpp  muxCommandReadBuffer.cpp  muxCommandReadBufferRegions.cpp  muxCommandResetQueryPool.cpp  muxCommandUserCallback.cpp  muxCommandWriteBuffer.cpp  muxCommandWriteBufferRegions.cpp  muxCreateBuffer.cpp  muxCreateCommandBuffer.cpp  muxCreateDevices.cpp  muxCreateExecutable.cpp  muxCreateFence.cpp  muxCreateImage.cpp  muxCreateKernel.cpp  muxCreateMemoryFromHost.cpp  muxCreateQueryPool.cpp  muxCreateSemaphore.cpp  muxDestroyBuffer.cpp  muxDestroyCommandBuffer.cpp  muxDestroyDevice.cpp  muxDestroyExecutable.cpp  muxDestroyFence.cpp  muxDestroyImage.cpp  muxDestroyKernel.cpp  muxDestroyQueryPool.cpp  muxDestroySemaphore.cpp  (+21 more)
modules/mux/tools/: CMakeLists.txt
modules/mux/utils/: CMakeLists.txt
modules/spirv-ll/: CMakeLists.txt
modules/spirv-ll/source/: builder.cpp  builder_glsl.cpp  builder_group_async_copies.cpp
modules/spirv-ll/test/: lit.cfg.in  run.py.in
modules/spirv-ll/tools/: CMakeLists.txt  spirv-ll.cpp
modules/tracer/: CMakeLists.txt
modules/tracer/source/: tracer.cpp
modules/utils/: CMakeLists.txt
modules/vecz/: CMakeLists.txt  LICENSE.txt  README.md
modules/vecz/source/: pass.cpp  (+20 more)
opencl_cts_build/: CMakeLists.txt  compile_offline.py.in
source/: CMakeLists.txt
source/cl/: CMakeLists.txt  README.md
source/ur/: CMakeLists.txt
source/vk/: .gitattributes  CMakeLists.txt  README.md
(+12645 files in other folders)
